fix; adjusted css - paragraph margin alignment

--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -236,7 +236,7 @@ a.reversefootnote {
 /* 내용이 없는 <p> 요소도 줄바꿈 간격 유지 */
 .post-content p:empty {
   display: block;
-  min-height: 1.5rem;
+  min-height: 1.66rem;
 }
 
 .post-content img {
